@@ -1,5 +1,5 @@
 dnl ------------------------------------------------------------------------- 
-dnl $Id: configure.in,v 1.104 2007/09/12 01:40:43 uehira Exp $
+dnl $Id: configure.in,v 1.105 2007/09/29 02:28:15 uehira Exp $
 dnl -------------------------------------------------------------------------
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/win.c)
@@ -98,6 +98,17 @@ AC_EGREP_CPP(tm_gmtoff, [#include <time.h>],
 						],
 						AC_MSG_RESULT(no)
 					)
+			]
+		)
+
+AC_MSG_CHECKING(for dir.d_namlen)
+AC_EGREP_CPP(d_namlen, [#include <dirent.h>],
+			[
+			AC_MSG_RESULT(yes)
+			AC_DEFINE(HAVE_STRUCT_D_NAMELEN)
+			],
+			[
+			AC_MSG_RESULT(no)
 			]
 		)
 
